<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lmu.pmg.sdiapp.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/introtext"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="16sp"
        android:layout_marginTop="36dp"
        android:textAlignment="center"
        android:layout_below="@+id/sdi_logo"
        android:layout_alignParentStart="true"
        android:lineSpacingExtra="8sp" />

    <ImageView
        android:id="@+id/sdi_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/sdi_logo"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/sdi_company_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/spinner_language_select"
        android:entries="@array/language_array"
        android:prompt="@string/language_prompt"
        android:layout_width="175dp"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/introtext"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_start"
        android:text="@string/button_start"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_width="200dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@+id/spinner_language_select"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_statistics"
        android:text="@string/button_statistics"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@+id/button_start"
        android:layout_alignStart="@+id/button_start"
        android:layout_marginTop="18dp" />


</RelativeLayout>
