<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.lmu.pmg.sdiapp.ChatEndActivity"
tools:showIn="@layout/activity_chat_end"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="20dp"
app:layout_collapseParallaxMultiplier="1.0">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="Richtige Antworten"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:id="@+id/textView"
        android:layout_marginTop="40dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        >

        <TextView
            android:text="25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="30sp" />

        <TextView
            android:text=" von "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="18sp" />

        <TextView
            android:text="30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="18sp" />
    </GridLayout>

    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="20dp"
    android:background="#DDD"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/text_margin"
    android:text="Antwortpräzision"
    android:textAllCaps="false"
    android:textSize="18sp"
    android:id="@+id/textView3"
    android:layout_marginTop="40dp" />

<RatingBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/percentBar"
    style="@android:style/Widget.DeviceDefault.CompoundButton.Star"
    android:numStars="5"
    android:isIndicator="true"
    android:stepSize="0.1"
    android:max="100"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/medal"
            android:id="@+id/imageView"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:text="Perfekte Lösung!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/perfectText"
            android:textSize="30sp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_centerVertical="true"
            android:layout_marginTop="10px" />

    </GridLayout>

    <Button
        android:text="@string/button_backToChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_backToChat"
        android:layout_marginTop="15dp" />

    <Button
        android:text="@string/button_toChatSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_toChatSelection" />

    <Button
        android:text="@string/button_toMainmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_toMainmenu" />




</LinearLayout>
